--- a/common/gift.html
+++ b/common/gift.html
@@ -2,9 +2,9 @@
 
 <div id="myModal4" class= "reveal-modal">
 	
-	<article class="12u special">
+	<form>
 		<img src="http://renovaworld.com/images/qr-code.png">
-	</article>
+	</form>
 	
 	<a class="close-reveal-modal">&#215;</a>											
 </div>
