--- a/common/giftmeyo.html
+++ b/common/giftmeyo.html
@@ -2,25 +2,9 @@
 
 <div id="myModal4" class= "reveal-modal">
 	
-	<form action="" id="form" target="_self" onsubmit="">
-
-		<center><h3>Re-Nova Monthly Newsletter</h3></center>
-		<center><h5>By signing up you agree to receive monthly email from us</h5></center>
-	  
-		<br>
-	  <p>
-	    <label for="name">Name:</label>
-	    <input type="text" name="Name" id="name" required>
-	  </p>
-	 
- 	  <p>
-	    <label for="email">Email:</label>
-	    <input type="email" name="Email" id="email" required>
-	  </p>
-
-	  <button id="ButtonSubmit" class="button" type="submit">Sign Up</button>
-	  
-	</form>	
+	<article class="12u special">
+		<img src="http://renovaworld.com/images/qr-code.png">
+	</article>
 	
 	<a class="close-reveal-modal">&#215;</a>											
 </div>
