--- a/common/giftmeyo.html
+++ b/common/giftmeyo.html
@@ -3,7 +3,15 @@
 <div id="myModal4" class= "reveal-modal">
 	
 	<article class="12u special">
-		<img src="http://renovaworld.com/images/qr-code.png">
+		<center><img src="http://renovaworld.com/images/qr-code.png"></center>
+		</br>
+		<center>
+			<h3>You can gift me in the form of donation any amount that you'd like to contribute.</h3>
+			</br>
+			<h5>Use the <a href="https://play.google.com/store/apps/details?id=net.one97.paytm&hl=en" target="_blank">PayTM App</a> to scan the QR Code and make the donation.</h5>
+			</br>
+			<p>Thank you for your support</p>
+		</center>
 	</article>
 	
 	<a class="close-reveal-modal">&#215;</a>											
