--- a/common/giftmeyo.html
+++ b/common/giftmeyo.html
@@ -8,9 +8,9 @@
 		<center>
 			<h3>You can gift me in the form of donation any amount that you'd like to contribute.</h3>
 			</br>
-			<h5>Use the <a href="https://play.google.com/store/apps/details?id=net.one97.paytm&hl=en" target="_blank">PayTM App</a> to scan the QR Code and make the donation.</h5>
+			<h4>Use the <a href="https://play.google.com/store/apps/details?id=net.one97.paytm&hl=en" target="_blank"><b>PayTM App</b></a> to scan the QR Code and make the donation.</h4>
 			</br>
-			<p>Thank you for your support</p>
+			<h4>Thank you for your support</h4>
 		</center>
 	</article>
 	
