--- a/common/giftmeyo.html
+++ b/common/giftmeyo.html
@@ -3,7 +3,7 @@
 <div id="myModal4" class= "reveal-modal">
 	
 	<article class="12u special">
-		<center><img src="http://renovaworld.com/images/qr-code.png"></center>
+		<center><img src="http://renovaworld.com/images/qr-code.png" class="img-responsive"></center>
 		</br>
 		<center>
 			<h3>You can gift me in the form of donation any amount that you'd like to contribute.</h3>
