--- a/studio.html
+++ b/studio.html
@@ -178,6 +178,9 @@
 										
 			<div id="contactusyo"></div>
 
+		<!-- GIFT ME POP UP -->
+		<div id="giftmeyo"></div>
+
 		<!-- Footer -->
 			<div id="footer"></div>
 
