--- a/404.html
+++ b/404.html
@@ -129,6 +129,9 @@
 		<!-- CONTACT US FORM -->
 										
 			<div id="contactusyo"></div>
+		
+		<!-- GIFT ME POP UP -->
+		<div id="giftmeyo"></div>
 
 		<!-- Footer -->
 			<div id="footer"></div>
