Update Thankyou with gift

--- a/thankyou.html
+++ b/thankyou.html
@@ -121,6 +121,14 @@
 							<p>
 								You are awesome! We'll get back to you soon. Kindly save "renovaofficial@gmail.com" as contact in your email so that our mails and replies don't go in the spam section.
 							</p>
+							</br>
+							<p>You can now help us by making a donation so that we can continue making music, tutorials and more for you all.
+							</br>
+							To make a donation, use the <a href="https://play.google.com/store/apps/details?id=net.one97.paytm&hl=en" target="_blank">PayTM App</a> and scan the image below.
+							</br>
+							Thank you for your support!
+							</br>
+							<center><img src="http://renovaworld.com/images/qr-code.png"></center>
 						</header>
 					</article>
 				</div>
@@ -129,6 +137,9 @@
 		<!-- CONTACT US FORM -->
 										
 			<div id="contactusyo"></div>
+		
+		<!-- GIFT ME POP UP -->
+		<div id="giftmeyo"></div>
 
 		<!-- Footer -->
 			<div id="footer"></div>
