--- a/thankyou.html
+++ b/thankyou.html
@@ -119,7 +119,7 @@
 						<header>
 							<h2><a href="#">Hi There!</a></h2>
 							<p>
-								You are awesome! We'll get back to you soon. Kindly save "renovaofficial@gmail.com" as contact in your email so that our mails and replies don't go in the spam section.
+								You are awesome! We'll get back to you soon. Kindly save "info@renovaworld.com" as contact in your email so that our mails and replies don't go in the spam section.
 							</p>
 							</br>
 							<p>You can now help us by making a donation so that we can continue making music, tutorials and more for you all.
