Added home studio

--- a/common/navyo.html
+++ b/common/navyo.html
@@ -2,7 +2,13 @@
 <ul id="forlinkchange">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="music.html">Music</a></li>
-	<li><a href="studio.html">Studio</a></li>
+	<li>
+		<a href="#">Studio</a>
+		<ul>
+			<li><a href="homestudio.html">Home Studio</li>
+			<li><a href="studio.html">Online Studio</li>
+		</ul>
+	</li>
 	<li><a href="store.html">Store</a></li>
 	<li><a href="exclusive.html">Exclusive</a></li>
 	<li>
