--- a/common/navyo.html
+++ b/common/navyo.html
@@ -5,8 +5,8 @@
 	<li>
 		<a href="#">Studio</a>
 		<ul>
-			<li><a href="homestudio.html">Home Studio</li>
-			<li><a href="studio.html">Online Studio</li>
+			<li><a href="homestudio.html">Home Studio</a></li>
+			<li><a href="studio.html">Online Studio</a></li>
 		</ul>
 	</li>
 	<li><a href="store.html">Store</a></li>
