Added studio layer

--- a/music.html
+++ b/music.html
@@ -45,7 +45,13 @@
 						<ul id="forlinkchange">
 							<li><a href="http://renovaworld.com/index.html">Home</a></li>
 							<li><a href="http://renovaworld.com/music.html">Music</a></li>
-							<li><a href="http://renovaworld.com/studio.html">Studio</a></li>
+							<li>
+		<a href="#">Studio</a>
+		<ul>
+			<li><a href="homestudio.html">Home Studio</a></li>
+			<li><a href="studio.html">Online Studio</a></li>
+		</ul>
+	</li>
 							<li><a href="http://renovaworld.com/store.html">Store</a></li>
 							<li><a href="http://renovaworld.com/exclusive.html">Exclusive</a></li>
 							<li>
