--- a/common/footeryo.html
+++ b/common/footeryo.html
@@ -10,7 +10,7 @@
 					</header>
 					<p>Follow us on social media and get updates about our latest projects.</p>
 					<ul class="icons">
-						<li><a href="https://twitter.com/pmishraofficial" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/ReNova_Official" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/renovaofficial" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
 						<li><a href="http://instagram.com/renovaofficial" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						<li><a href="https://soundcloud.com/prashantmishra_re-nova" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a></li>
