studio details change

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<header>
 							<h3><span>Re-Nova Studio</span></h3>
 						</header>
-						<p>We use a Yamaha PSR E343 keyboard, Behringer XNYX 302 USB Mixer, Shure SV100 microphone and VSTs for production</p>							
+						<p>We use <a href="http://us.openlabs.com/" target="_blank">Open Labs</a>' Stagelight to capture musical ideas, <a href="https://getsoundly.com/" target="_blank">Soundly</a> for sound effects and foley, <a href="https://izotope.com/" target="_blank">iZotope</a>'s Advanced Bundle for Audio Edits & Mastering, <a href="https://waves.com/" target="_blank">Waves</a> Plugins and <a href="https://new.steinberg.net/nuendo/" target="_blank">Nuendo 10</a> for mixing along with <a href="https://new.steinberg.net/absolute/" target="_blank">Absolute Bundle</a> and <a href="https://www.native-instruments.com/en/products/komplete/bundles/komplete-12-ultimate-collectors-edition/" target="_blank">Native Instrument's Komplete Collector's Edition</a> for amazing sounds using the awesome <a href="https://www.steinberg.net/en/products/audio_interfaces/ur_rt_series/ur_rt2.html" target="_blank">Steinberg & Rupert Neve's UR-RT2 Audio interface</a>.</p>							
 					</article>
 				
 					<article>
