--- a/common/navyo.html
+++ b/common/navyo.html
@@ -12,7 +12,7 @@
 	<li><a href="store.html">Store</a></li>
 	<li><a href="exclusive.html">Exclusive</a></li>
 	<li>
-		<a href="#">Partners</a>
+		<a href="#">Projects</a>
 		<ul>
 			<li>
 				<a href="http://divilabs.com" target="_blank">Digital iVision Labs</a>
@@ -23,9 +23,9 @@
 					<li><a href="#">offers</a></li>
 				</ul> -->
 			</li>
-			<li><a href="http://mechjunction.com/" target="_blank">Mech Junction</a></li>
-			<li><a href="http://millionpixelsproductions.com" target="_blank">Million Pixels</a></li>									
-			<li><a href="http://clickroots.com/" target="_blank">ClickRoots.com</a></li>
+			<li><a href="https://recreationdevelopers.com" target="_blank">Re-Creation Developers</a></li>
+			<li><a href="https://recreationclassroom.com" target="_blank">Re-Creation Classroom</a></li>									
+			<!-- <li><a href="http://clickroots.com/" target="_blank">ClickRoots.com</a></li> -->
 			<li><a href="https://www.youtube.com/user/theGBHproduction" target="_blank">GBH Production</a></li>
 		</ul>
 	</li>
