--- a/index.html
+++ b/index.html
@@ -126,21 +126,46 @@
 
 				<div class="container">
 					<article id="main" class="special">
-				<div class="row">
-                                        <article class="4u special">
-					<h2>Jingles</h2>
-					<p>
-						We released our first jingle on 25th Oct 2015, that is to be featured in an online podcast channel.
-						<br>
-						The track is called <strong>Level Unlocked</strong> and is available under creative common license for free usage.
-					</p>
-                                        </article>
-                                        <article class="8u">
-                                          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230028013&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-                                        </article>
-				</div>
-                                </article>
-                                </div>
+						<!-- Books -->
+						<div class="row">
+                            <article class="6u special">
+								<h2>Scribble - A Collection of Books</h2>
+								<p>
+									We have released our first series of books on 25th August 2019 with the title 'Scribble'. You can get Vol. 1 and Vol. 2 today on all of Amazon stores for Kindle.
+								</p>
+                            </article>
+                            <article class="3u">
+                              		<center><img src="https://renovaworld.com/images/scribble-vol1-first-drafts-cover-page.jpg" class="4u"></center>
+                              		<center><h3>Scibble Vol. 1 - First Drafts</h3></center>
+                              		<br>
+                              		<center>
+                              			<a href="#" class="button buyButton" data-reveal-id="scribbleVol1">Get Now</a>
+                              		</center>
+                            </article>
+                            <article class="3u">
+                              <center><img src="https://renovaworld.com/images/scribble-vol2-observations-cover-page.jpg" class="4u"></center>
+                              <center><h3>Scibble Vol. 2 - Observations</h3></center>
+                              <br>
+                              <center><a href="#" class="button buyButton" data-reveal-id="scribbleVol2">Get Now</a></center>
+                            </article>
+						</div>
+						<hr>
+						<!-- Jingles -->
+						<div class="row">
+                            <article class="4u special">
+								<h2>Jingles</h2>
+								<p>
+									We released our first jingle on 25th Oct 2015, that is to be featured in an online podcast channel.
+									<br>
+									The track is called <strong>Level Unlocked</strong> and is available under creative common license for free usage.
+								</p>
+                            </article>
+                            <article class="8u">
+                              <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230028013&amp;color=00aabb&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                            </article>
+						</div>
+                    </article>
+                </div>
 			</div>
 
 		<!-- Banner -->
@@ -207,6 +232,10 @@
 		<!-- CONTACT US FORM -->
 										
 			<div id="contactusyo"></div>
+
+		<!-- Books details -->
+										
+		<div id="bookDetails"></div>
 		
 		<!-- GIFT ME POP UP -->
 		<div id="giftmeyo"></div>
