Updated index.html with LP

--- a/index.html
+++ b/index.html
@@ -121,11 +121,36 @@
 			
 		</div>
 
+			<!-- Banner -->
+			<section id="banner">
+				<header>
+					<h2>Hi. Welcome to <strong>Re-Nova</strong>.</h2>
+					<p>
+						<strong>Nova</strong> is the inner explosion in a star that makes it glow, and <strong>renovation</strong> aims at the betterment of the society.
+						<br>
+						<strong>Re-Nova</strong> is all about creating something from our hearts and standing up together with an inner explosion to renovate the world into a better place.
+					</p>
+				</header>
+			</section>
                 <!-- New Update -->
-                        <div id="newupdate" style="background-color: #F0F4F4;" class="wrapper style1">
+            <div id="newupdate" style="background-color: #F0F4F4;" class="wrapper style1">
 
 				<div class="container">
 					<article id="main" class="special">
+						<!-- Linkin Park Quiz -->
+						<div class="row">
+                            <article class="6u special">
+								<h2>Linkin Park Quiz</h2>
+								<br>
+								<p>
+									We are a huge fan of <a href="https://www.linkinpark.com/" target="_blank">Linkin Park</a> and their music has always inspired us at every moment of our lives. As a <i>Thank You</i>, we decided to make a fun <strong>Google Assistant Quiz</strong>. To play this game, go to Google Assistant in your device and say, "<strong><i>Ok Google, take the Linkin Park Quiz</i></strong>". Share with your friends and see who got the highest score.
+								</p>
+                            </article>
+                            <article class="6u">
+                              		<center><img src="https://renovaworld.com/images/google-assistant-linkin-park-quiz.png" class="8u"></center>
+                            </article>
+                        </div>
+                        <hr>
 						<!-- Books -->
 						<div class="row">
                             <article class="6u special">
@@ -164,21 +189,10 @@
                               <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230028013&amp;color=00aabb&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
                             </article>
 						</div>
+						<hr>
                     </article>
                 </div>
 			</div>
-
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>Hi. Welcome to <strong>Re-Nova</strong>.</h2>
-					<p>
-						<strong>Nova</strong> is the inner explosion in a star that makes it glow, and <strong>renovation</strong> aims at the betterment of the society.
-						<br>
-						<strong>Re-Nova</strong> is all about creating something from our hearts and standing up together with an inner explosion to renovate the world into a better place.
-					</p>
-				</header>
-			</section>
 
 		<!-- Carousel -->
 			<section class="carousel">
