--- a/common/booksdetails.html
+++ b/common/booksdetails.html
@@ -5,7 +5,7 @@
 	
 	<article class="12u">
 		<center><img src="https://renovaworld.com/images/scribble-vol1-first-drafts-cover-page.jpg" class="4u"></center>
-		<center><h3>Scibble Vol. 1 - First Drafts</h3></center>
+		<center><h3>Scibble Vol. 1 - First Drafts (75% off on Google Store)</h3></center>
 		<br>
 		<center><p><strong>Scribble</strong> is a collection of short stories, poems, handwritten scripts along with beautiful art that bring together the idea of observing life and living in the moment.
 		<br>
@@ -76,7 +76,7 @@
 		</div>
 		<div class="row" id="vol1GoogleData">
 			<div class="form-group">
-			  <label for="sel4">Select Google store:  </label>
+			  <label for="sel4">Select Google store (75% off till Jan 1st 2021): </label>
 			  <select class="form-control" id="vol1SelectGoogleStore">
 			  	<option value="">select a store</option>
 			  	<option value="#vol1GoogleBooks">Google Books</option>
@@ -84,10 +84,10 @@
 			</select>
 			</div>
 			<article class="4u invisible store" id="vol1GooglePlay">
-				<center><a class="button buyButton" target="_blank" href="https://play.google.com/store/books/details?id=5ICrDwAAQBAJ">Go to Google Play Store</a></center>
+				<center><a class="button buyButton" target="_blank" href="https://play.google.com/redeem?code=P75QUTLH2939Z">Redeem offer</a></center>
 			</article>
 			<article class="4u invisible store" id="vol1GoogleBooks">
-				<center><a class="button buyButton" target="_blank" href="https://books.google.co.in/books/about?id=5ICrDwAAQBAJ&redir_esc=y">Go to Google Books</a></center>
+				<center><a class="button buyButton" target="_blank" href="https://books.google.co.in/books/about?id=5ICrDwAAQBAJ&redir_esc=y">Coupon: P75QUTLH2939Z</a></center>
 			</article>
 		</div>
 	</article>
@@ -100,7 +100,7 @@
 	
 	<article class="12u">
 		<center><img src="https://renovaworld.com/images/scribble-vol2-observations-cover-page.jpg" class="4u"></center>
-		<center><h3>Scibble Vol. 2 - Observations</h3></center>
+		<center><h3>Scibble Vol. 2 - Observations (50% off on Google Store)</h3></center>
 		<br>
 		<center><p><strong>Scribble</strong> is a collection of poems, short stories and art to inspire the idea of thinking differently among the readers.
 		<br>
@@ -171,7 +171,7 @@
 		</div>
 		<div class="row" id="vol2GoogleData">
 			<div class="form-group">
-			  <label for="sel3">Select Google store:  </label>
+			  <label for="sel3">Select Google store (50% off till Jan 1st 2021):  </label>
 			  <select class="form-control" id="vol2SelectGoogleStore">
 			  	<option value="">select a store</option>
 			  	<option value="#vol2GoogleBooks">Google Books</option>
@@ -179,10 +179,10 @@
 			</select>
 			</div>
 			<article class="4u invisible store" id="vol2GooglePlay">
-				<center><a class="button buyButton" target="_blank" href="https://play.google.com/store/books/details?id=6oCrDwAAQBAJ">Go to Google Play Store</a></center>
+				<center><a class="button buyButton" target="_blank" href="https://play.google.com/redeem?code=P2SNXPVUS3Z19">Redeem offer</a></center>
 			</article>
 			<article class="4u invisible store" id="vol2GoogleBooks">
-				<center><a class="button buyButton" target="_blank" href="https://books.google.co.in/books/about?id=6oCrDwAAQBAJ&redir_esc=y">Go to Google Books</a></center>
+				<center><a class="button buyButton" target="_blank" href="https://books.google.co.in/books/about?id=6oCrDwAAQBAJ&redir_esc=y">Coupon: P2SNXPVUS3Z19</a></center>
 			</article>
 		</div>
 	</article>
