--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
                               		<center><h3>Scibble Vol. 1 - First Drafts</h3></center>
                               		<br>
                               		<center>
-                              			<a href="#" class="button buyButton" data-reveal-id="scribbleVol1">Get Now</a>
+                              			<a href="#" class="button buyButton" data-reveal-id="scribbleVol1">Get Now (Exclusive 75% off)</a>
                               		</center>
                             </article>
                             <article class="3u">
                               <center><img src="https://renovaworld.com/images/scribble-vol2-observations-cover-page.jpg" class="4u"></center>
                               <center><h3>Scibble Vol. 2 - Observations</h3></center>
                               <br>
-                              <center><a href="#" class="button buyButton" data-reveal-id="scribbleVol2">Get Now</a></center>
+                              <center><a href="#" class="button buyButton" data-reveal-id="scribbleVol2">Get Now (Exclusive 50% off)</a></center>
                             </article>
 						</div>
 						<hr>
