# hyperlink to book section added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </div>
                         <hr>
 						<!-- Books -->
-						<div class="row">
+						<div class="row" id="books">
                             <article class="6u special">
 								<h2>Scribble - A Collection of Books</h2>
 								<p>
