removed right click from RR's page

--- a/rickrubin.html
+++ b/rickrubin.html
@@ -30,7 +30,7 @@
 		</noscript>
 
 	</head>
-	<body class="no-sidebar">
+	<body class="no-sidebar" oncontextmenu="return false">
 
 		<!-- Header -->
 			<div id="header">
