Added RR in nav bar for phones

--- a/rickrubin.html
+++ b/rickrubin.html
@@ -76,6 +76,7 @@
 									</ul>
 								</li>
 								<li><a href="artists.html">Artists</a></li>
+								<li style="background-color:white"><a href="rickrubin.html" style="color: black">Rick Rubin Tweets</a></li>
 							</ul>
 								
 								<!-- Dropdown and Current Page link to '#' -->
@@ -127,7 +128,7 @@
 							<p>
 								We are a huge fan of the great <a href="https://twitter.com/RickRubin" target="_blank">Rick Rubin</a> and admire all the work that he has done. He has been inspiring us almost every day with his wisdom through his tweets that we have saved over time.
 							</p>
-							<div height="500px" width="500px"><center><img id="rickImageHolder" height="500px" width="500px"></center></div>
+							<div height="400px" width="400px"><center><img id="rickImageHolder" height="400px" width="400px"></center></div>
 							<button class="button" style="background-color:#3a86b3" onclick="getRandomTweetImage()">Load New Quote</button>
 							<p>
 								We hope that you fill find them as helpful as we do. We do not own the rights to these images and they are taken from Rick's Twitter.
